Add pre and post snapshot scripts

--- a/sanoid.conf
+++ b/sanoid.conf
@@ -67,6 +67,13 @@
 	daily_warn = 48
 	daily_crit = 60
 
+[template_scripts]
+	### run script before snapshot
+	### snapshot name will be supplied as an argument
+	prescript = /path/to/script.sh
+	### run script after snapshot
+	### snapshot name will be supplied as an argument
+	postscript = /path/to/script.sh
 
 [template_ignore]
 	autoprune = no
