--- a/sanoid.defaults.conf
+++ b/sanoid.defaults.conf
@@ -15,6 +15,8 @@ path =
 recursive =
 use_template =
 process_children_only =
+prescript =
+postscript =
 
 # If any snapshot type is set to 0, we will not take snapshots for it - and will immediately
 # prune any of those type snapshots already present.
